test/e2e/resources/gateway_rate_limit.yaml
apiVersion: bedrockagentcorecontrol.services.k8s.aws/v1alpha1
kind: GatewayRateLimit
metadata:
  name: $RATE_LIMIT_NAME
  namespace: default
spec:
  rateLimitID: $RATE_LIMIT_ID
  gatewayIdentifierRef:
    from:
      name: $GATEWAY_NAME
  description: "ACK e2e test gateway rate limit"
  dimensionKeys:
    - toolName
  entries:
    - dimensions:
        toolName: "*"
      requests:
        - period: minute
          rate: 100
