test/e2e/resources/gateway_target_connector.yaml
apiVersion: bedrockagentcorecontrol.services.k8s.aws/v1alpha1
kind: GatewayTarget
metadata:
  name: $GATEWAY_TARGET_NAME
  namespace: default
spec:
  name: $GATEWAY_TARGET_NAME
  description: "ACK e2e test connector gateway target"
  gatewayIdentifier: $GATEWAY_ID
  credentialProviderConfigurations:
    - credentialProviderType: GATEWAY_IAM_ROLE
  targetConfiguration:
    mcp:
      connector:
        source:
          connectorID: $CONNECTOR_ID
        configurations:
          - name: $CONNECTOR_TOOL_NAME
            parameterValues: '$PARAMETER_VALUES'
